Reworked the user display on the WB

--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1346,6 +1346,10 @@ div.tooltip {
     }
   }
 
+  em {
+    color: @myhordes-button-color;
+  }
+
   &>h1:first-child {
     font-size: 1.2rem; font-weight: bold; margin: 4px; padding: 0; text-align: center;
     border-bottom: 1px solid darken(@myhordes-smalltext, 20%); font-variant: small-caps;
