--- a/assets/less/modules/beyond.less
+++ b/assets/less/modules/beyond.less
@@ -159,6 +159,10 @@ div.beyond-escort-off, div.beyond-escort-on {
     padding: 0; margin: 0; font-size: 0;
     &>li { list-style: none; display: inline-block; margin: 0; padding: 0; }
   }
+
+  .citizen-box {
+    border: none;
+  }
 }
 
 ul.escort-action-list {
