--- a/templates/ajax/game/actions.html.twig
+++ b/templates/ajax/game/actions.html.twig
@@ -47,7 +47,7 @@
         {% endif %}
         <ul class="actions">
             {% if (item_action_list is defined) %}
-                {% for entry in item_action_list|sort((a,b) => (a.item.essential == b.item.essential ? a.item.prototype.label|trans({}, 'items') <=> b.item.prototype.label|trans({}, 'items') : b.item.essential <=> a.item.essential)) %}
+                {% for entry in item_action_list|sort((a,b) => (a.item.inventory != b.item.inventory ? a.item.inventory <=> b.item.inventory : (a.item.essential == b.item.essential ? a.item.prototype.label|trans({}, 'items') <=> b.item.prototype.label|trans({}, 'items') : b.item.essential <=> a.item.essential))) %}
                     <li class="action {% if entry.broken is defined and entry.broken %}broken-item{% endif %}" {% if entry.crossed %}disabled{% elseif entry.broken is defined and entry.broken %}{% elseif entry.targets is null %}x-action-id="{{ entry.id }}" {% if entry.action.confirm %}x-action-confirm="1"{% endif %} x-provoking-id="{{ entry.item.id }}"{% else %}x-target-definition="{{ entry.id }}--{{ entry.item.id }}"{% endif %}>
                         <img src="{{ asset('build/images/item/item_' ~ entry.item.prototype.icon ~ '.gif') }}" alt="{{ entry.item.prototype.label|trans({},'items') }}">
                         {% if scout and entry.action.keepsCover %}
