--- a/templates/ajax/soul/visit.html.twig
+++ b/templates/ajax/soul/visit.html.twig
@@ -50,16 +50,19 @@
                         <div class="personal_desc"><div>{{ 'Persönliche Beschreibung'|trans({},'game') }}</div><div>"{{ user_desc|raw }}"</div></div>
                     {% endif %}
 
-                    {% if user.nameHistory|length > 0 %}
+                    {{ dump(user.nameHistory) }}
+                    {#
+                    {% if user.nameHistory|filter(n => n != user.name)|length > 0 %}
                         <div class="personal_desc mt-1">
                             <div>{{'{user} war in der Vergangenheit unter folgenden Namen bekannt:'|trans({'user': user}, 'soul')}}</div>
                             <div>
-                                {% for name in user.nameHistory %}
+                                {% for name in user.nameHistory|filter(n => n != user.name) %}
                                     {{ name }}{% if not loop.last %}, {% endif %}
                                 {% endfor %}
                             </div>
                         </div>
                     {% endif %}
+                    #}
 
                     <div class="town-history">
                         <div id="town-list"></div>
