Prepared work for #1551

--- a/assets/less/modules/town.less
+++ b/assets/less/modules/town.less
@@ -924,6 +924,9 @@ ul.list{
     &.row-detail {
       color: #e3c699;
       background-color: #996739;
+      em {
+        font-size: 0.8rem;
+      }
     }
   }
 }
