--- a/templates/ajax/game/log_content.html.twig
+++ b/templates/ajax/game/log_content.html.twig
@@ -26,20 +26,17 @@
     {% endfor %}
 
     <script>
-    let remove_log = document.querySelectorAll('.remove-entry');
-        for(let i = 0 ; i < remove_log.length ; i++){
-            remove_log[i].addEventListener('click', function(){
-                $.ajax.background().easySend("{{path('delete_log_entry')}}", {'log_entry_id': this.getAttribute('x-entry-id')}, function(){
-                	let log_boxes = document.querySelectorAll('.log-container');
-                	for (let i = 0; i < log_boxes.length; i++) {
-                		let log = log_boxes[i].querySelector( '.log' );
-                		const url = log.getAttribute('x-log-source');
-                		let content_box = log.querySelectorAll('.log-content');
-                		$.ajax.background().load( content_box[0], url, false, {day: -1} );
-                	}
-                });
+        $.html.addEventListenerAll( '.remove-entry', 'click', (e,elem) => {
+            $.ajax.background().easySend("{{path('delete_log_entry')}}", {'log_entry_id': elem.getAttribute('x-entry-id')}, function(){
+                let log_boxes = document.querySelectorAll('.log-container');
+                for (let i = 0; i < log_boxes.length; i++) {
+                    let log = log_boxes[i].querySelector( '.log' );
+                    const url = log.getAttribute('x-log-source');
+                    let content_box = log.querySelectorAll('.log-content');
+                    $.ajax.background().load( content_box[0], url, false, {day: {{ day }} } );
+                }
             });
-        }
+        } )
     </script>
 {% endif %}
 {{ include('ajax/flash.html.twig') }}
