--- a/templates/scripts/errors/town.txt.twig
+++ b/templates/scripts/errors/town.txt.twig
@@ -8,7 +8,7 @@
 {{ constant('App\\Controller\\Town\\TownController::ErrorWellEmpty') }}          : '{{'Der Brunnen ist leer!'|trans({},'game')|e('js')}}',
 {{ constant('App\\Controller\\Town\\TownController::ErrorWellLimitHit') }}       : '{{'Du kannst heute keine weiteren Rationen entnehmen.'|trans({},'game')|e('js')}}',
 {{ constant('App\\Controller\\Town\\TownController::ErrorWellNoWater') }}        : '{{'Hierfür brauchst du klares Wasser (keine Kanister)!'|trans({},'game')|e('js')}}',
-{{ constant('App\\Controller\\Town\\TownController::ErrorDoorAlreadyClosed') }}  : '{{'Das Tor ist bereits geschlossen.'|trans({},'game')|e('js')}}',
+{{ constant('App\\Controller\\Town\\TownController::ErrorDoorAlreadyClosed') }}  : '{{'Das Stadttor wurde bereits von einem anderen pflichtbewussten Bürger geschlossen.'|trans({},'game')|e('js')}}',
 {{ constant('App\\Controller\\Town\\TownController::ErrorDoorAlreadyOpen') }}    : '{{'Das Tor ist bereits offen.'|trans({},'game')|e('js')}}',
 {{ constant('App\\Controller\\Town\\TownController::ErrorNotEnoughRes') }}       : '{{'Für dieses Gebäude fehlen Baumaterialien.'|trans({},'game')|e('js')}}',
 {{ constant('App\\Controller\\Town\\TownController::ErrorAlreadyUpgraded') }}    : '{{'Du hast heute bereits eine Verbesserung deines Hauses vorgenommen.'|trans({},'game')|e('js')}}',
