--- a/templates/ajax/ghost/intro.html.twig
+++ b/templates/ajax/ghost/intro.html.twig
@@ -60,31 +60,25 @@
                                     </div>
                                 {% endif %}
 
+                                {% set coa_link = '<a href="#" x-ajax-href="' ~ path('soul_coalitions') ~ '">' ~ ('Koalition'|trans({},'soul')) ~ '</a>' %}
+
                                 {% if warnCoaInactive %}
                                     <div class="note note-critical">
-                                        {% trans from 'ghost' %}
-                                            Achtung: Du stehst deiner Koalition NICHT ZUR VERFÜGUNG! Das bedeutet, dass du diese Partie allein spielen wirst.
-                                        {% endtrans %}
+                                        {{ 'Achtung: Du stehst deiner {coalition} NICHT ZUR VERFÜGUNG! Das bedeutet, dass du diese Partie allein spielen wirst.'|trans({ coalition: coa_link },'ghost')|raw }}
                                     </div>
                                 {% elseif warnCoaEmpty %}
                                     <div class="note note-critical">
-                                        {% trans from 'ghost' %}
-                                            Achtung: Im Moment steht kein Mitglied deiner Koalition zur Verfügung, um dir in eine Stadt zu folgen.
-                                        {% endtrans %}
+                                        {{ 'Achtung: Im Moment steht kein Mitglied deiner {coalition} zur Verfügung, um dir in eine Stadt zu folgen.'|trans({ coalition: coa_link },'ghost')|raw }}
                                     </div>
                                 {% elseif warnCoaNotComplete %}
                                     <div class="note note-critical">
-                                        {% trans from 'ghost' %}
-                                            Achtung: Im Moment stehen nicht alle Mitglieder deiner Koalition zur Verfügung, um dir in eine Stadt zu folgen.
-                                        {% endtrans %}
+                                        {{ 'Achtung: Im Moment stehen nicht alle Mitglieder deiner {coalition} zur Verfügung, um dir in eine Stadt zu folgen.'|trans({ coalition: coa_link },'ghost')|raw }}
                                     </div>
                                 {% endif %}
 
                                 {% if coa is not empty %}
                                     <div class="note">
-                                        {% trans from 'ghost' %}
-                                        Wenn du eine Stadt betrittst, werden folgende Mitglieder deiner Koalition dir folgen:
-                                        {% endtrans %}<br />
+                                        {{ 'Wenn du eine Stadt betrittst, werden folgende Mitglieder deiner {coalition} dir folgen:'|trans({ coalition: coa_link },'ghost')|raw }}
                                         {% for member in coa %}
                                             <strong>{{ member.name }}</strong><br />
                                         {% endfor %}
