Improve soul ranking Fixes #1529

--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1572,7 +1572,7 @@ select {
   border: 1px solid #ddab76;
   outline: 1px solid black;
   cursor: pointer;
-  width: 100%;
+  &:not(.small) {width: 100%;}
 }
 
 i.dagger {
