--- a/templates/ajax/soul/season.html.twig
+++ b/templates/ajax/soul/season.html.twig
@@ -8,19 +8,18 @@
     <div class="row">
         <div class="cell rw-12 seasonHeader">
             <span class="seasonName">
-                {% if currentSeason is not null and currentSeason != "all" %}
+                {% if currentSeason is not null and not virtualSeason %}
                     {% if currentSeason.number > 0 %}
                         {{ ('Saison ' ~ currentSeason.number ~ '.' ~ currentSeason.subNumber)|trans({}, "season")}}
                     {% endif %}
-                {% else %}
-                    {% if soloType is defined %}
-                    {% else %}
-                        {{'Alte Städte'|trans({}, "soul")}}
-                    {% endif %}
+                {% elseif not virtualSeason and soloType is not defined %}
+                    {{'Alte Städte'|trans({}, "soul")}}
+                {% elseif not virtualSeason and soloType is defined %}
+                    {{'Alte Seelen'|trans({}, "soul")}}
                 {% endif %}
             </span>
             <span class="seasonNumber">
-                {% if soloType is defined %}
+                {% if virtualSeason %}
                     {{'ALLE SAISONS'|trans({}, "soul")}}
                 {% else %}
                     {% if currentSeason is not null %}
@@ -46,9 +45,9 @@
         <div class="cell rw-12">
             <ul class="type-list">
                 {% for type in townTypes %}
-                    <li x-ajax-sticky x-ajax-href="{{ path('soul_season', {'type': type.id}) }}" class="type {% if currentType and type.id == currentType.id %}selected{% endif %}" x-type-id="{{ type.id }}"><img src="{%if type.name == 'remote' %}{{ asset('build/images/pictos/r_surlst.gif') }}{% else %}{{ asset('build/images/towntypes/' ~ type.name ~ '.gif') }}{% endif %}" alt="" /> <span class="link soul_season_link">{{ type.label|trans({}, 'soul') }}</span></li>
+                    <li x-ajax-sticky x-ajax-href="{{ path('soul_season', {'type': type.id, 'season': (currentSeason and not virtualSeason) ? currentSeason.id : (virtualSeason ? 'c' : 'a')}) }}" class="type {% if currentType and type.id == currentType.id %}selected{% endif %}" x-type-id="{{ type.id }}"><img src="{%if type.name == 'remote' %}{{ asset('build/images/pictos/r_surlst.gif') }}{% else %}{{ asset('build/images/towntypes/' ~ type.name ~ '.gif') }}{% endif %}" alt="" /> <span class="link soul_season_link">{{ type.label|trans({}, 'soul') }}</span></li>
                 {% endfor %}
-                <li x-ajax-sticky x-ajax-href="{{ path('soul_season_solo', {'type': 'soul'}) }}" class="type {% if soloType is defined and soloType == 'soul' %}selected{% endif %}" x-type-id="soul"><img src="{{ asset('build/images/icons/small_ghost_red.gif') }}" alt="" /> <span class="link soul_season_link">{{ 'Seelenpunkte'|trans({}, 'soul') }}</span></li>
+                <li x-ajax-sticky x-ajax-href="{{ path('soul_season_solo') }}" class="type {% if soloType is defined and soloType == 'soul' %}selected{% endif %}" x-type-id="soul"><img src="{{ asset('build/images/icons/small_ghost_red.gif') }}" alt="" /> <span class="link soul_season_link">{{ 'Seelenpunkte'|trans({}, 'soul') }}</span></li>
             </ul>
         </div>
         {% if currentType %}
@@ -138,7 +137,21 @@
                 <div class="row season_access_select">
                     <div class="cell rw-4">
                         <select name="season" id="season">
-                            <option value="null">{{'Alle Saisons'|trans({}, "soul")}}</option>
+                            <option {% if (currentSeason == 'all') %}selected{% endif %} value="all">{{'Alle Saisons'|trans({}, "soul")}}</option>
+                            <option {% if (currentSeason == 'myh') %}selected{% endif %} value="myh">{{'Alle Saisons auf MyHordes'|trans({}, "soul")}}</option>
+                            {% for season in seasons %}
+                                <option value="{{season.id}}" {% if currentSeason is not null and not virtualSeason and currentSeason == season %}selected{% endif %}>
+                                    {% set got  = season.number == 0 and season.subnumber <= 14 %}
+                                    {% set beta = season.number == 0 and not got %}
+                                    {% if got %}{{ 'Gute Alte Zeit'|trans({},'soul') }} -{% endif %}
+                                    {% if beta %}
+                                        {{ 'Beta-Saison'|trans({},'soul') }}
+                                    {% else %}
+                                        {{ 'Saison {n}'|trans({'{n}': season.number > 0 ? season.number : season.subNumber},'soul') }} - {{ ('Saison ' ~ season.number ~ '.' ~ season.subNumber)|trans({}, "season")}}
+                                    {% endif %}
+                                </option>
+                            {% endfor %}
+                            <option value="a" {% if currentSeason is null %}selected{% endif %}>{{'Alpha-Seelen'|trans({}, "soul")}}</option>
                         </select>
                     </div>
                     <div class="cell rw-8">
@@ -176,12 +189,12 @@
                     {% endfor %}
                 </div>
                 {% else %}
-                    <div class="note note-critical">Aucun joueur ne figure au classement!</div> <!-- TODO: missing translation -->
+                    <div class="note note-critical">{{ 'Es sind keine Spieler aufgelistet!'|trans({},'soul') }}</div> <!-- TODO: missing translation -->
                 {% endif %}
             </div>
         {% endif %}
     </div>
-    {% if seasons|length > 0 %}
+    {% if seasons|length > 0 and soloType is not defined %}
      <div class="row">
         <div class="padded cell rw-12">
             <div class="note">
@@ -190,7 +203,7 @@
                 </label>
                 <select name="season" id="season">
                     {% for season in seasons %}
-                        <option value="{{season.id}}" {% if currentSeason is not null and currentSeason != season %}selected{% endif %}>
+                        <option value="{{season.id}}" {% if currentSeason is not null and currentSeason == season %}selected{% endif %}>
                             {% set got  = season.number == 0 and season.subnumber <= 14 %}
                             {% set beta = season.number == 0 and not got %}
                             {% if got %}{{ 'Gute Alte Zeit'|trans({},'soul') }} -{% endif %}
@@ -201,18 +214,45 @@
                             {% endif %}
                         </option>
                     {% endfor %}
-                    <option value="-1" {% if currentSeason is null %}selected{% endif %}>{{'Alte Städte'|trans({}, "soul")}}</option>
+                    <option value="a" {% if currentSeason is null %}selected{% endif %}>{{'Alte Städte'|trans({}, "soul")}}</option>
                 </select>
             </div>
         </div>
     </div>
     {% endif %}
-<div class="help">
-    <strong>{{'Die blau markierten Felder sind Städte, in denen du mitgespielt hast!'|trans({}, 'game')}}</strong>
-    {{'Die Ranglisten aktualisieren sich jeden Tag nach dem mitternächtlichen Angriff.'|trans({}, 'game')}}<br />
-    {{ help_lnk('Ranglisten und Saisons'|trans({}, 'help'), 'help', {'name': 'seasons_and_rankings'}) }}
-</div>
-
+    {% if soloType is not defined %}
+        <div class="help">
+            <strong>{{'Die blau markierten Felder sind Städte, in denen du mitgespielt hast!'|trans({}, 'game')}}</strong>
+            {{'Die Ranglisten aktualisieren sich jeden Tag nach dem mitternächtlichen Angriff.'|trans({}, 'game')}}<br />
+            {{ help_lnk('Ranglisten und Saisons'|trans({}, 'help'), 'help', {'name': 'seasons_and_rankings'}) }}
+        </div>
+    {% elseif (pages > 1) %}
+        <div class="row-flex">
+            <div class="padded cell left" {% if page <= 1 %}disabled{% endif %}>
+                <img alt="<<" src="{{ asset('build/images/icons/small_prev.gif') }}" />
+                <a href="#" x-ajax-sticky x-ajax-href="{{ path('soul_season_solo', {page: 1, season: virtualSeason ? currentSeason : (currentSeason ? currentSeason.id : 'c')}) }}">{{ 'Anfang'|trans({},'global') }}</a>
+            </div>
+            <div class="padded cell left" {% if page <= 1 %}disabled{% endif %}>
+                <img alt="<" src="{{ asset('build/images/icons/small_prev.gif') }}" />
+                <a href="#" x-ajax-sticky x-ajax-href="{{ path('soul_season_solo', {page: page - 1, season: virtualSeason ? currentSeason : (currentSeason ? currentSeason.id : 'c')}) }}">{{ 'Vorh.'|trans({},'global') }}</a>
+            </div>
+            <div class="padded cell grow-1 center">
+                <label><select id="pagination" class="small">
+                    {% for p in 1..pages %}
+                        <option value="{{ path('soul_season_solo', {page: p, season: virtualSeason ? currentSeason : (currentSeason ? currentSeason.id : 'c')}) }}" {% if p == page %}selected{% endif %}>{{ 'Seite {page}'|trans({page: p},'global') }}</option>
+                    {% endfor %}
+                </select></label>
+            </div>
+            <div class="padded cell right" {% if page >= pages %}disabled{% endif %}>
+                <a href="#" x-ajax-sticky x-ajax-href="{{ path('soul_season_solo', {page: page + 1, season: virtualSeason ? currentSeason : (currentSeason ? currentSeason.id : 'c')}) }}">{{ 'Folg.'|trans({},'global') }}</a>
+                <img alt=">" src="{{ asset('build/images/icons/small_next.gif') }}" />
+            </div>
+            <div class="padded cell right" {% if page >= pages %}disabled{% endif %}>
+                <a href="#" x-ajax-sticky x-ajax-href="{{ path('soul_season_solo', {page: pages, season: virtualSeason ? currentSeason : (currentSeason ? currentSeason.id : 'c')}) }}">{{ 'Ende'|trans({},'global') }}</a>
+                <img alt=">" src="{{ asset('build/images/icons/small_next.gif') }}" />
+            </div>
+        </div>
+    {% endif %}
 {% endblock %}
 {% block js %}
     {{ parent() }}
@@ -220,13 +260,17 @@
         let season = document.getElementById("season");
         {% if soloType is defined %}
             if(season) season.addEventListener("change", function(){
-                $.ajax.load(null, '{{ path("soul_season_solo", {'type': soloType}) }}', true, {'season': season.value});
+                $.ajax.load(null, '{{ path("soul_season_solo") }}', true, {'season': season.value});
             })
         {% else %}
             if(season) season.addEventListener("change", function(){
                 $.ajax.load(null, '{{ path("soul_season", {'type': currentType.id}) }}', true, {'season': season.value});
             })
         {% endif %}
+
+        $.html.addEventListenerAll('#pagination', 'change', (e,elem) => {
+            $.ajax.load(null, elem.value, true);
+        } )
 
         $.html.addEventListenerAll( '[x-town-toggle]', 'click', function(e,elem) {
             const id = elem.getAttribute('x-town-toggle');
