--- a/templates/ajax/game/map.html.twig
+++ b/templates/ajax/game/map.html.twig
@@ -199,35 +199,50 @@
             <div class="zone-plane-controls {% if not app.user.disableFx %}retro{% endif %} {% if blocked %}blocked{% endif %}">
                 <div class="marker-direction"></div>
                 {% if move %}
+                    {% if scout_sense  %}
+                        {% set arrow_danger_sense_e = zone.x < map.map_x1 ? map.zones[zone.x+1][zone.y].getPersonalScoutEstimation(citizen) : 0 %}
+                        {% set arrow_danger_level_e = arrow_danger_sense_e > 5 ? 2 : ( arrow_danger_sense_e > 2 ? 1 : 0 ) %}
+                        {% set arrow_danger_sense_w = zone.x > map.map_x0 ? map.zones[zone.x-1][zone.y].getPersonalScoutEstimation(citizen) : 0 %}
+                        {% set arrow_danger_level_w = arrow_danger_sense_w > 5 ? 2 : ( arrow_danger_sense_w > 2 ? 1 : 0 ) %}
+                        {% set arrow_danger_sense_s = zone.y > map.map_y0 ? map.zones[zone.x][zone.y-1].getPersonalScoutEstimation(citizen) : 0 %}
+                        {% set arrow_danger_level_s = arrow_danger_sense_s > 5 ? 2 : ( arrow_danger_sense_s > 2 ? 1 : 0 ) %}
+                        {% set arrow_danger_sense_n = zone.y < map.map_y1 ? map.zones[zone.x][zone.y+1].getPersonalScoutEstimation(citizen) : 0 %}
+                        {% set arrow_danger_level_n = arrow_danger_sense_n > 5 ? 2 : ( arrow_danger_sense_n > 2 ? 1 : 0 ) %}
+                    {% else %}
+                        {% set arrow_danger_sense_e = 0 %}
+                        {% set arrow_danger_level_e = 0 %}
+                        {% set arrow_danger_sense_w = 0 %}
+                        {% set arrow_danger_level_w = 0 %}
+                        {% set arrow_danger_sense_s = 0 %}
+                        {% set arrow_danger_level_s = 0 %}
+                        {% set arrow_danger_sense_n = 0 %}
+                        {% set arrow_danger_level_n = 0 %}
+                    {% endif %}
                     {% if citizen.escortSettings is null or citizen.escortSettings.leader is null %}
-                        {% if zone.x < map.map_x1 %}<div x-direction-x="1"  x-direction-y="0"  x-target-x="{{ zone.x + 1 }}" x-target-y="{{ zone.y }}" class="action-move action-move-east"></div>{% endif %}
-                        {% if zone.x > map.map_x0 %}<div x-direction-x="-1" x-direction-y="0"  x-target-x="{{ zone.x - 1 }}" x-target-y="{{ zone.y }}" class="action-move action-move-west"></div>{% endif %}
-                        {% if zone.y > map.map_y0 %}<div x-direction-x="0"  x-direction-y="-1" x-target-x="{{ zone.x }}" x-target-y="{{ zone.y - 1 }}" class="action-move action-move-south"></div>{% endif %}
-                        {% if zone.y < map.map_y1 %}<div x-direction-x="0"  x-direction-y="1"  x-target-x="{{ zone.x }}" x-target-y="{{ zone.y + 1 }}" class="action-move action-move-north"></div>{% endif %}
+                        {% if zone.x < map.map_x1 %}<div x-direction-x="1"  x-direction-y="0"  x-target-x="{{ zone.x + 1 }}" x-target-y="{{ zone.y }}" class="action-move action-move-danger-{{ arrow_danger_level_e }} action-move-east"></div>{% endif %}
+                        {% if zone.x > map.map_x0 %}<div x-direction-x="-1" x-direction-y="0"  x-target-x="{{ zone.x - 1 }}" x-target-y="{{ zone.y }}" class="action-move action-move-danger-{{ arrow_danger_level_w }} action-move-west"></div>{% endif %}
+                        {% if zone.y > map.map_y0 %}<div x-direction-x="0"  x-direction-y="-1" x-target-x="{{ zone.x }}" x-target-y="{{ zone.y - 1 }}" class="action-move action-move-danger-{{ arrow_danger_level_s }} action-move-south"></div>{% endif %}
+                        {% if zone.y < map.map_y1 %}<div x-direction-x="0"  x-direction-y="1"  x-target-x="{{ zone.x }}" x-target-y="{{ zone.y + 1 }}" class="action-move action-move-danger-{{ arrow_danger_level_n }} action-move-north"></div>{% endif %}
                     {% endif %}
                     {% if scout_sense  %}
                         {% if zone.x < map.map_x1 %}<div class="scout-sense scout-sense-east">
-                            {% set sense = map.zones[zone.x+1][zone.y].getPersonalScoutEstimation(citizen) %}
                             <svg viewBox="0 0 14 39" xmlns="http://www.w3.org/2000/svg">
-                                <text x="8" y="22.5" text-anchor="middle" style="font: 12px 'visitor2', sans-serif; fill: #a0be40;">{{ sense }}</text>
+                                <text x="8" y="22.5" text-anchor="middle" style="font: 12px 'visitor2', sans-serif; fill: #a0be40;">{{ arrow_danger_sense_e }}</text>
                             </svg>
                             </div>{% endif %}
                         {% if zone.x > map.map_x0 %}<div class="scout-sense scout-sense-west">
-                            {% set sense = map.zones[zone.x-1][zone.y].getPersonalScoutEstimation(citizen) %}
                             <svg viewBox="0 0 14 39" xmlns="http://www.w3.org/2000/svg">
-                                <text x="8" y="22.5" text-anchor="middle"  style="font: 12px 'visitor2', sans-serif; fill: #a0be40;">{{ sense }}</text>
+                                <text x="8" y="22.5" text-anchor="middle"  style="font: 12px 'visitor2', sans-serif; fill: #a0be40;">{{ arrow_danger_sense_w }}</text>
                             </svg>
                             </div>{% endif %}
                         {% if zone.y > map.map_y0 %}<div class="scout-sense scout-sense-south">
-                            {% set sense = map.zones[zone.x][zone.y-1].getPersonalScoutEstimation(citizen) %}
                             <svg viewBox="0 0 39 14" xmlns="http://www.w3.org/2000/svg">
-                                <text x="19.5" y="9" text-anchor="middle"  style="font: 12px 'visitor2', sans-serif; fill: #a0be40;">{{ sense }}</text>
+                                <text x="19.5" y="9" text-anchor="middle"  style="font: 12px 'visitor2', sans-serif; fill: #a0be40;">{{ arrow_danger_sense_s }}</text>
                             </svg>
                             </div>{% endif %}
                         {% if zone.y < map.map_y1 %}<div class="scout-sense scout-sense-north">
-                            {% set sense = map.zones[zone.x][zone.y+1].getPersonalScoutEstimation(citizen) %}
                             <svg viewBox="0 0 39 14" xmlns="http://www.w3.org/2000/svg">
-                                <text x="19.5" y="9" text-anchor="middle"  style="font: 12px 'visitor2', sans-serif; fill: #a0be40;">{{ sense }}</text>
+                                <text x="19.5" y="9" text-anchor="middle"  style="font: 12px 'visitor2', sans-serif; fill: #a0be40;">{{ arrow_danger_sense_n }}</text>
                             </svg>
                             </div>{% endif %}
                     {% endif %}
