--- a/templates/ajax/game/town/citizen_vote.html.twig
+++ b/templates/ajax/game/town/citizen_vote.html.twig
@@ -43,12 +43,13 @@
                 </div>
                 <div class="padded cell rw-3 rw-md-6 small">
                     <span>
-                        {% if citizen.banished %}
-                            <img alt="" src="{{ asset('build/images/icons/banished.gif') }}" />
-                        {% elseif citizen.profession.heroic %}
+                        {% if citizen.profession.heroic %}
                             <img alt="" src="{{ asset('build/images/professions/hero.gif') }}" />
                         {% else %}
                             <img alt="" src="{{ asset('build/images/professions/void.gif') }}" />
+                        {% endif %}
+                        {% if citizen.banished %}
+                            <img alt="" src="{{ asset('build/images/icons/banished.gif') }}" />
                         {% endif %}
                         <img alt="{{ citizen.profession.label|trans({},'game') }}" src="{{ asset('build/images/professions/' ~ citizen.profession.icon ~ '.gif') }}" />
                         <b>{{ citizen.name }}</b>
