--- a/templates/ajax/game/town/citizen.html.twig
+++ b/templates/ajax/game/town/citizen.html.twig
@@ -51,12 +51,13 @@
                     <div>
                         <div>
                             {% if citizen.alive %}
-                                {% if citizen.banished %}
-                                    <img alt="" src="{{ asset('build/images/icons/banished.gif') }}" />
-                                {% elseif citizen.profession.heroic %}
+                                {% if citizen.profession.heroic %}
                                     <img alt="" src="{{ asset('build/images/professions/hero.gif') }}" />
                                 {% else %}
                                     <img alt="" src="{{ asset('build/images/professions/void.gif') }}" />
+                                {% endif %}
+                                {% if citizen.banished %}
+                                    <img alt="" src="{{ asset('build/images/icons/banished.gif') }}" />
                                 {% endif %}
                                 <img alt="{{ citizen.profession.label|trans({},'game') }}" src="{{ asset('build/images/professions/' ~ citizen.profession.icon ~ '.gif') }}" />
                             {% else %}
