--- a/templates/ajax/soul/me.html.twig
+++ b/templates/ajax/soul/me.html.twig
@@ -175,6 +175,11 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="cell padded rw-12 rw-sm-12">
+               {{ help_lnk('Die Seele in MyHordes'|trans({}, 'game'), 'help', {'name': 'your_soul'}) }}
+            </div>
+        </div>
     </div>
 {% endblock %}
 {% block js %}
