--- a/templates/ajax/admin/users/account.html.twig
+++ b/templates/ajax/admin/users/account.html.twig
@@ -168,7 +168,7 @@
                             {% if user.activeTitle or user.activeIcon %}
                                 <div>
                                     {% if user.activeIcon %}<img alt="" src="{{ user.activeIcon.customIcon ? url('app_web_customicon', {uid: user.id, aid: user.activeIcon.id, name: user.activeIcon.customIconName, ext: user.activeIcon.customIconFormat}) : asset('build/images/icons/title/' ~ user.activeIcon.prototype.icon ~ '.gif') }}" />{% endif %}
-                                    {% if user.activeTitle %} {{ user.activeTitle.customTitle ?? user.activeTitle.prototype.title|trans({},'game') }}{% endif %}
+                                    {% if user.activeTitle %} {{ user.activeTitle.customTitle ?? user.activeTitle.prototype.title|trans({},'game')|raw }}{% endif %}
                                 </div>
                             {% else %}
                                 <div>---</div>
